--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "@slcpub/gulp-alt-useref",
-  "description": "Alternative to gulp-useref.",
+  "name": "@csmcentral/gulp-alt-useref",
+  "description": "This is a fork of @slcpub/gulp-alt-useref - Alternative to gulp-useref.",
   "version": "1.0.0",
   "repository": {
     "type": "git",
-    "url": "https://github.com/softlife/gulp-alt-useref.git"
+    "url": "https://github.com/csmcentral/gulp-alt-useref.git"
   },
-  "homepage": "https://github.com/softlife/gulp-alt-useref#readme",
+  "homepage": "https://github.com/csmcentral/gulp-alt-useref#readme",
   "main": "index.js",
   "dependencies": {
     "gulp-concat": "^2.6.0",
@@ -17,8 +17,5 @@
   },
   "devDependencies": {
     "gulp-debug": "^3.2.0"
-  },
-  "publishConfig": {
-    "@slcpub:registry": "https://gitlab.com/api/v4/projects/34256364/packages/npm/"
   }
 }
